--- a/src/App.css
+++ b/src/App.css
@@ -64,20 +64,20 @@ body {
 }
 
 .introduction .introduction-text {
-  color: white; /* Set text color to white */
-  flex: 1; /* Take up remaining space */
-  width: 60%; /* Set width to 60% */
-  text-align: left; /* Align text to left */
-  padding-left: 100px;
+  color: white; 
+  flex: 1; 
+  width: 60%; 
+  text-align: left; 
+  padding-left: 100px
 }
 
 .introduction .avatar {
-  flex: 1; /* Take up remaining space */
-  text-align: right; /* Align avatar to right */
+  flex: 1;
+  text-align: right; 
 }
 
 .introduction .avatar img {
-  width: 300px; /* Set maximum width for the avatar image */
+  width: 300px;
   padding-right: 150px;
   object-fit: cover;
   border-radius: 16px;
@@ -230,27 +230,27 @@ body {
   font-size: 14px;
 }
 a {
-  color: #007bff; /* Change to the desired color */
-  text-decoration: none; /* Optional: Remove underline */
+  color: #007bff; 
+  text-decoration: none; 
 }
 
 a:hover {
-  text-decoration: underline; /* Optional: Add underline on hover */
+  text-decoration: underline; 
 }
 @media only screen and (min-width: 600px) {
   .navbar {
-    flex-direction: row; /* Change back to row layout for larger screens */
-    justify-content: space-between; /* Adjust alignment for larger screens */
-    padding: 10px 20px; /* Adjusted padding for larger screens */
+    flex-direction: row; 
+    justify-content: space-between; 
+    padding: 10px 20px; 
   }
 
   .image-grid {
-    grid-template-columns: repeat(2, 1fr); /* Reset grid columns for larger screens */
+    grid-template-columns: repeat(2, 1fr); 
   }
 
   .blog {
       .blog {
-          width: calc(50% - 20px); /* Adjusted width for two columns with spacing */
+          width: calc(50% - 20px); 
         }
 }
 }
